--- a/index.html
+++ b/index.html
@@ -12,6 +12,26 @@
 <body>
 
 
+<main>
+
+--aside for info panel on left; flex = 33%
+<aside>
+
+</aside>
+
+
+--div for interactive mamp portion; flex = 67%
+<div>
+
+
+</div>
+
+
+
+
+
+</main>
+
 
 
 
