--- a/index.html
+++ b/index.html
@@ -5,24 +5,24 @@
 <meta charset="utf-8"/>
 <link rel="stylesheet" href="mapstylesheet.css">
 <title> Interactive Map of GSU </title>
-
 </head>
 
 
 <body>
-
-
+<br>
+<h1> INTERACTIVE MAP OF GEORGIA STATE UNIVERSITY </h1>
+<br>
 <main>
 
---aside for info panel on left; flex = 33%
+
 <aside>
 
 </aside>
 
 
---div for interactive mamp portion; flex = 67%
-<div>
 
+<div>
+<img src="interactivemap.jpg" alt="interactive map">
 
 </div>
 
