--- a/index.html
+++ b/index.html
@@ -21,8 +21,23 @@
 
 
 
-<div>
-<img src="interactivemap.jpg" alt="interactive map">
+<div class="interactive">
+<img src="interactivemap.jpg" alt="interactive map" class="map">
+<a id="langdalehall" class="button" href="#/">
+	<div class="popup popup__topright">
+		<div class="innerpopup">
+		<h2 class="popup__title">LANGDALEHALL</h2>
+		</div>
+	</div>
+</a>
+
+<a id="librarynorth" class="button" href="#/">
+	<div class="popup popup__topright">
+		<div class="innerpopup">
+		<h2 class="popup__title">LIBRARYNORTH</h2>
+		</div>
+	</div>
+</a>
 
 </div>
 
