--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 <a id="langdalehall" class="button" href="#/">
 	<div class="popup popup__topright">
 		<div class="innerpopup">
-		<h2 class="popup__title">LANGDALEHALL</h2>
+		<img src="langdaleimage.jpg" class="popimage"></img>
+		<p class="popup__text">Langdale Hall</p>
 		</div>
 	</div>
 </a>
@@ -34,11 +35,104 @@
 <a id="librarynorth" class="button" href="#/">
 	<div class="popup popup__topright">
 		<div class="innerpopup">
-		<h2 class="popup__title">LIBRARYNORTH</h2>
+		<img src="libnorthimage.jpg" class="popimage"></img>
+		<p class="popup__text">Library North</p>
+
 		</div>
 	</div>
 </a>
 
+<a id="kellhall" class="button" href="#/">
+	<div class="popup popup__topright">
+		<div class="innerpopup">
+		<img src="kellhallimage.jpg" class="popimage"></img>
+		<p class="popup__text">Kell Hall</p>
+		</div>
+	</div>
+</a>
+
+<a id="artsandhumanities" class="button" href="#/">
+	<div class="popup popup__topright">
+		<div class="innerpopup">
+		<img src="artsandhumanitiesimage.jpg" class="popimage"></img>
+		<p class="popup__text">Arts and Humanities</p>
+	
+		</div>
+	</div>
+</a>
+
+<a id="sparks" class="button" href="#/">
+	<div class="popup popup__topright">
+		<div class="innerpopup">
+		<img src="sparksimage.jpg" class="popimage"></img>
+		<p class="popup__text">Sparks Hall</p>
+	
+		</div>
+	</div>
+</a>
+
+<a id="west" class="button" href="#/">
+	<div class="popup popup__topright">
+		<div class="innerpopup">
+		<img src="westimage.jpg" class="popimage"></img>
+		<p class="popup__text">Student Center West</p>
+		</div>
+	</div>
+</a>
+
+<a id="urbanlife" class="button" href="#/">
+	<div class="popup popup__topright">
+		<div class="innerpopup">
+		<img src="urbanlifeimage.jpg" class="popimage"></img>
+		<p class="popup__text">Urban Life Building</p>
+		</div>
+	</div>
+</a>
+
+<a id="east" class="button" href="#/">
+	<div class="popup popup__topright">
+		<div class="innerpopup">
+		<img src="eastimage.jpg" class="popimage"></img>
+		<p class="popup__text">Student Center East</p>
+		</div>
+	</div>
+</a>
+
+<a id="studentrecreation" class="button" href="#/">
+	<div class="popup popup__topright">
+		<div class="innerpopup">
+		<img src="studentrecimage.jpg" class="popimage"></img>
+		<p class="popup__text">Student Recreation Center</p>
+		</div>
+	</div>
+</a>
+
+<a id="librarysouth" class="button" href="#/">
+	<div class="popup popup__topright">
+		<div class="innerpopup">
+		<img src="southimage.jpg" class="popimage"></img>
+		<p class="popup__text">Library South</p>
+		</div>
+	</div>
+</a>
+
+<a id="classroomsouth" class="button" href="#/">
+	<div class="popup popup__topright">
+		<div class="innerpopup">
+		<img src="classroomsouthimage.jpg" class="popimage"></img>
+		<p class="popup__text">Classroom South</p>
+		</div>
+	</div>
+</a>
+
+<a id="petit" class="button" href="#/">
+	<div class="popup popup__topright">
+		<div class="innerpopup">
+		<img src="petitimage.jpg" class="popimage"></img>
+		<p class="popup__text">Petit Science Center</p>
+		</div>
+	</div>
+</a>
 </div>
 
 
