--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
 <body>
 <br>
+<br>
 <h1> INTERACTIVE MAP OF GEORGIA STATE UNIVERSITY </h1>
+<br>
 <br>
 <main>
 
@@ -21,21 +23,23 @@
 
 
 
+
 <div class="interactive">
 <img src="interactivemap.jpg" alt="interactive map" class="map">
 <a id="langdalehall" class="button" href="#/">
 	<div class="popup popup__topright">
 		<div class="innerpopup">
-		<img src="langdaleimage.jpg" class="popimage"></img>
+		<img src="langdaleimage.jpg" class="popimage">
 		<p class="popup__text">Langdale Hall</p>
 		</div>
 	</div>
 </a>
 
+
 <a id="librarynorth" class="button" href="#/">
 	<div class="popup popup__topright">
 		<div class="innerpopup">
-		<img src="libnorthimage.jpg" class="popimage"></img>
+		<img src="libnorthimage.jpg" class="popimage">
 		<p class="popup__text">Library North</p>
 
 		</div>
@@ -45,7 +49,7 @@
 <a id="kellhall" class="button" href="#/">
 	<div class="popup popup__topright">
 		<div class="innerpopup">
-		<img src="kellhallimage.jpg" class="popimage"></img>
+		<img src="kellhallimage.jpg" class="popimage">
 		<p class="popup__text">Kell Hall</p>
 		</div>
 	</div>
@@ -54,7 +58,7 @@
 <a id="artsandhumanities" class="button" href="#/">
 	<div class="popup popup__topright">
 		<div class="innerpopup">
-		<img src="artsandhumanitiesimage.jpg" class="popimage"></img>
+		<img src="artsandhumanitiesimage.jpg" class="popimage">
 		<p class="popup__text">Arts and Humanities</p>
 	
 		</div>
@@ -64,7 +68,7 @@
 <a id="sparks" class="button" href="#/">
 	<div class="popup popup__topright">
 		<div class="innerpopup">
-		<img src="sparksimage.jpg" class="popimage"></img>
+		<img src="sparksimage.jpg" class="popimage">
 		<p class="popup__text">Sparks Hall</p>
 	
 		</div>
@@ -74,7 +78,7 @@
 <a id="west" class="button" href="#/">
 	<div class="popup popup__topright">
 		<div class="innerpopup">
-		<img src="westimage.jpg" class="popimage"></img>
+		<img src="westimage.jpg" class="popimage">
 		<p class="popup__text">Student Center West</p>
 		</div>
 	</div>
@@ -83,7 +87,7 @@
 <a id="urbanlife" class="button" href="#/">
 	<div class="popup popup__topright">
 		<div class="innerpopup">
-		<img src="urbanlifeimage.jpg" class="popimage"></img>
+		<img src="urbanlifeimage.jpg" class="popimage">
 		<p class="popup__text">Urban Life Building</p>
 		</div>
 	</div>
@@ -92,7 +96,7 @@
 <a id="east" class="button" href="#/">
 	<div class="popup popup__topright">
 		<div class="innerpopup">
-		<img src="eastimage.jpg" class="popimage"></img>
+		<img src="eastimage.jpg" class="popimage">
 		<p class="popup__text">Student Center East</p>
 		</div>
 	</div>
@@ -101,7 +105,7 @@
 <a id="studentrecreation" class="button" href="#/">
 	<div class="popup popup__topright">
 		<div class="innerpopup">
-		<img src="studentrecimage.jpg" class="popimage"></img>
+		<img src="studentrecimage.jpg" class="popimage">
 		<p class="popup__text">Student Recreation Center</p>
 		</div>
 	</div>
@@ -110,7 +114,7 @@
 <a id="librarysouth" class="button" href="#/">
 	<div class="popup popup__topright">
 		<div class="innerpopup">
-		<img src="southimage.jpg" class="popimage"></img>
+		<img src="southimage.jpg" class="popimage">
 		<p class="popup__text">Library South</p>
 		</div>
 	</div>
@@ -119,31 +123,23 @@
 <a id="classroomsouth" class="button" href="#/">
 	<div class="popup popup__topright">
 		<div class="innerpopup">
-		<img src="classroomsouthimage.jpg" class="popimage"></img>
+		<img src="classroomsouthimage.jpg" class="popimage">
 		<p class="popup__text">Classroom South</p>
 		</div>
 	</div>
 </a>
-
 <a id="petit" class="button" href="#/">
 	<div class="popup popup__topright">
 		<div class="innerpopup">
-		<img src="petitimage.jpg" class="popimage"></img>
+		<img src="petitimage.jpg" class="popimage">
 		<p class="popup__text">Petit Science Center</p>
 		</div>
 	</div>
 </a>
 </div>
-
-
-
-
-
 </main>
 
-
-
-
+<p class="banner"> This is an interactive map demo designed for the use of new students who have trouble navigating GSU campus. The buttons on the map can be clicked to reveal the building of choice as well as a link taking you to a short description of each location. </p>
 </body>
 
 
