--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 <meta charset="utf-8"/>
 <link rel="stylesheet" href="mapstylesheet.css">
+<link rel="stylesheet" href="asidestylesheet.css">
 <title> Interactive Map of GSU </title>
 </head>
 
@@ -18,6 +19,31 @@
 
 
 <aside>
+<div class="asidetitle">
+	<div>
+		<a href="index.html"><img src="GSUlogo.jpeg" class="logoimage"></a>
+		<h1 class="h1buildings">Buildings</h1>
+	</div>
+	<div class="list">
+		<ul>
+			<li><a href="http://shorturl.at/yzJR4">GSU Arts and Humanities Building</a></li>
+			<li><a href="http://shorturl.at/hsIL3">GSU Library Plaza</a></li>
+			<li><a href="http://shorturl.at/pstR6">Langdale Hall</a></li>
+			<li><a href="http://shorturl.at/szT26">Classroom South</a></li>
+			<li><a href="http://shorturl.at/htFG2">Sparks Hall</a></li>
+			<li><a href="http://shorturl.at/eftOS">GSU Library</a></li>
+			<li><a href="http://shorturl.at/lwEO6">Student Center West</a></li>
+			<li><a href="http://shorturl.at/lwEO6">Student Center East</a></li>
+			<li><a href="http://shorturl.at/iwDJM">Urban Life Building</a></li>
+			<li><a href="http://shorturl.at/gmsJK">Student Recreation Center</a></li>
+			<li><a href="http://shorturl.at/tKL38">Petit Science Center</a></li>
+				
+		</ul>
+	</div>
+
+
+	</div>
+	
 
 </aside>
 
